--- a/src/components/form-privacy/styles.scss
+++ b/src/components/form-privacy/styles.scss
@@ -21,16 +21,7 @@ form#form-privacy {
     margin: 0 $spacing-medium $spacing-medium 0;
     width: $spacing-large; // check box size w
     height: $spacing-large; // check box size h
-    background-color: $primary-color-highlight; // ???
-
-    &:hover {
-      background-color: $primary-color-highlight !important; // ???
-      border: 1px solid $primary-color-highlight !important; // ???
-      + b {
-        border-color: $primary-color-highlight !important; // ???
-      }
-    }
-
+    background-color: $primary-color-highlight;
   }
 
 }
